--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5086,7 +5086,7 @@ button.close {
   overflow: auto;
   overflow-y: scroll;
   position: fixed;
-  top: 10%;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
