--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Ed Hamilton | Musician</title>
-	    <meta name="description" content="">
-	    <meta name="keywords" content="">
-	    <meta name="robots" content="">
+	    <meta name="description" content="Ed Hamilton is an ambient musician from London. Ed makes ambient music with a rhythmical focus that Fluid Radio desirbed as 'his rhythmic innovations breathing a fresh vitality into a familiar sound and helping to create an atmosphere that is immediately present rather than wistfully remembered'">
+	    <meta name="keywords" content="Ed Hamilton ambient musician, ambient, ambient electronic, modern classical, ambient modern classical, london, London, Hibernate, hibernate, Hibernate records, Ed Hamilton Hibernate Records, Futuresequence, Arabesque, Sketches For Skomer, Behind the Clouds, Behind the Clouds (for zoe)">
+	    <meta name="robots" content="Ed Hamilton ambient musician, ambient, ambient electronic, modern classical, ambient modern classical, london, London, Hibernate, hibernate, Hibernate records, Ed Hamilton Hibernate Records, Futuresequence, Arabesque, Sketches For Skomer, Behind the Clouds, Behind the Clouds (for zoe)">
 	    <link rel="shortcut icon" href="assets/icon.ico">
 	
 	    <div class="fit-vids-style">
