remove mobile button

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,13 +16,13 @@
 					<a href="#">ED HAMILTON</a>
 				</div>  
 			</div>
-			<div class="large-6 medium-8 small-10 columns">
+			<!--<div class="large-6 medium-8 small-10 columns">
 				<div id="button-wrapper">
 					<button type="button" role="button" aria-label="Toggle Navigation" class="lines-button x" data-reveal-id="mobile-menu">
 						<span class="lines-white"></span>
 					</button>
 				</div>
-			</div>
+			</div>-->
 		</div>
 	</nav> 
 </div>
@@ -46,5 +46,4 @@
 	  		</nav>
 	  	</div>
 	  </header>
-</div>  	
-
+</div>
