contact button added

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,7 @@
     		<li><a href="mailto:ed_hamilton@live.com" target="_blank">Email</a></li>
     		<li><a href="https://twitter.com/ed_hamilton812" target="_blank">Twitter</a></li>
     		<li><a href="http://instagram.com/ed_hamilton812" target="_blank">Instagram</a></li>
+			<li><a href="mailto:ed_hamilton@live.com">Contact</a>
     		</ul>
     	</div>
     	<div class="large-2 medium-2 columns">
