--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
 			<li><a data-toggle="modal" data-target="#arabesque">Arabesque</a></li>
 			<li><a data-toggle="modal" data-target="#sfs">Sketches for Skomer</a></li>
 			<li><a data-toggle="modal" data-target="#btc">Behind the Clouds (for Zoë)</a></li>
+			<li><a href="mailto:ed_hamilton@live.com">Contact</a>
 		</ul>
 	</div>
 </div>
@@ -41,6 +42,7 @@
 		  		  <li><a data-toggle="modal" data-target="#arabesque">Arabesque</a></li>
 		  		  <li><a data-toggle="modal" data-target="#sfs">Sketches For Skomer</a></li>
 		  		  <li><a data-toggle="modal" data-target="#btc">Behind The Clouds (for Zoë)</a></li>
+					<li><a href="mailto:ed_hamilton@live.com">Contact</a>
 		  		  </ul>
 		  		  </div>
 	  		</nav>
