mobile menu now working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,13 +21,13 @@
   
 	<body class="">
 
- 		<div id="preloader">
-	    	<div id="status">
-	      		<div class="fadeInDown">
-	      			<img src="assets/logo_black.png" alt="">
-	      		</div>
-	      	</div>
-	  	</div>
+ 		<div id="preloader" style="">
+			<div id="status" style="">
+		    	<div class="fadeInDown">
+		      		<img src="./assets/logo_black.png" alt="">
+		      	</div>
+		     </div>
+		</div>
 	
 		<div class="menu">
 			<div class="main-menu">
