--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
 		</div>
 		<%= stylesheet_link_tag "application" %>
 		<script src="assets/modernizr.js"></script>
-		<script src="./assets/jquery.js"></script>
-		<script src="./assets/foundation.min.js"></script>
-		<script src="./assets/jquery.fitvids.js"></script>
-		<script type="text/javascript" src="./assets/bootstrap.js"></script>
+		<script src="assets/jquery.js"></script>
+		<script src="assets/foundation.min.js"></script>
+		<script src="assets/jquery.fitvids.js"></script>
+		<script type="text/javascript" src="assets/bootstrap.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,700|Open+Sans:300,700' rel='stylesheet' type='text/css'>
 	</head>
   
