--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,6 @@
 			<style>.fluid-width-video-wrapper {width: 100%;position: relative;padding: 0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position: absolute;top: 0;left: 0;width: 100%;height: 100%;}</style>
 		</div>
 		<%= stylesheet_link_tag "application" %>
-		<script src="assets/modernizr.js"></script>
-		<script src="assets/jquery.js"></script>
-		<script src="assets/foundation.min.js"></script>
-		<script src="assets/jquery.fitvids.js"></script>
-		<script type="text/javascript" src="assets/bootstrap.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,700|Open+Sans:300,700' rel='stylesheet' type='text/css'>
 	</head>
   
@@ -247,6 +242,11 @@
 			</div>
 		</div>
 		</footer>
+		<script src="https://s3.amazonaws.com/egh-images/modernizr.js"></script>
+		<script src="https://s3.amazonaws.com/egh-images/jquery.js"></script>
+		<script src="https://s3.amazonaws.com/egh-images/foundation.min.js"></script>
+		<script src="https://s3.amazonaws.com/egh-images/jquery.fitvids.js"></script>
+		<script type="text/javascript" src="https://s3.amazonaws.com/egh-images/bootstrap.js"></script>
 		<script>
 	      $(window).load(function() {               
 			$('#status').fadeOut('slow');               
