preloader now gif

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
  		<div id="preloader" style="">
 			<div id="status" style="">
 		    	<div class="fadeInDown">
-		      		<img src="./assets/logo_black.png" alt="">
+		      		<img src="./assets/GIFF.gif" alt="">
 		      	</div>
 		     </div>
 		</div>
